[gd_scene load_steps=2 format=3 uid="uid://bl4xtcl1ndyya"]

[ext_resource type="Script" uid="uid://clsudyryivyd3" path="res://src/simulation/simulation_root.gd" id="1_q1p4u"]

[node name="SimulationRoot" type="Node2D"]
script = ExtResource("1_q1p4u")

[node name="WorldContext" type="Node" parent="."]

[node name="PlayerState" type="Node" parent="."]

[node name="InstitutionManager" type="Node" parent="."]

[node name="DependencyGraph" type="Node" parent="."]

[node name="TensionManager" type="Node" parent="."]

[node name="EventManager" type="Node" parent="."]

[node name="SimulationClock" type="Node" parent="."]

[node name="SimulationUI" type="CanvasLayer" parent="."]

[node name="MainLayout" type="Control" parent="SimulationUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SimulationUI/MainLayout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/MainLayout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerDashboard" type="PanelContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Day: 1"

[node name="CashLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cash: $1000"

[node name="BandwidthLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bandwidth: 50/100"

[node name="ExposureLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exposure: 0%"

[node name="RelevanceLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Relevance: 0%"

[node name="Spacer" type="Control" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewCrisisBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "View Crisis (0)"

[node name="EventQueueBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Event Queue (0)"

[node name="MenuButton" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="TensionHBox" type="HBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TensionLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/TensionHBox"]
layout_mode = 2
text = "Tension:"

[node name="TensionBar" type="ProgressBar" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/PlayerDashboard/VBoxContainer/TensionHBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ContentHSplit" type="HSplitContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -350

[node name="LeftPanel" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="InstitutionLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Institutions"

[node name="InstitutionPanel" type="PanelContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/LeftPanel/InstitutionPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/LeftPanel/InstitutionPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="RightPanel" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="EventTreeLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Event Tree"

[node name="TreeTypeHBox" type="HBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel"]
layout_mode = 2

[node name="InstitutionSelect" type="OptionButton" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/TreeTypeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TreeTypeSelect" type="OptionButton" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/TreeTypeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefaultActionsPanel" type="PanelContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel"]
layout_mode = 2

[node name="ActionsVBox" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/DefaultActionsPanel"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/DefaultActionsPanel/ActionsVBox"]
layout_mode = 2
text = "Default Actions"

[node name="ActionInstSelect" type="OptionButton" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/DefaultActionsPanel/ActionsVBox"]
layout_mode = 2

[node name="ActionsContainer" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/DefaultActionsPanel/ActionsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="EventTreePanel" type="PanelContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventTreeScroll" type="ScrollContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/EventTreePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventTree" type="Tree" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/ContentHSplit/RightPanel/EventTreePanel/EventTreeScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="DebugPanel" type="PanelContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DebugLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEBUG CONTROLS"

[node name="ButtonRow1" type="HBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AdvanceDayBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer/ButtonRow1"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "Advance Day"

[node name="AddStressBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer/ButtonRow1"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "Add Stress"

[node name="AddTensionBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer/ButtonRow1"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "Add Tension"

[node name="ButtonRow2" type="HBoxContainer" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AddCashBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer/ButtonRow2"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "Add Cash"

[node name="AddBandwidthBtn" type="Button" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer/ButtonRow2"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "Add Bandwidth"

[node name="ConsoleLabel" type="Label" parent="SimulationUI/MainLayout/MarginContainer/MainVBox/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
text = "Ready"

[node name="EventDialog" type="Control" parent="SimulationUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="SimulationUI/EventDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="SimulationUI/EventDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SimulationUI/EventDialog/CenterContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Event Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Event Description goes here. This can be multiple lines describing what happened and what choices the player has."
autowrap_mode = 2

[node name="EffectsLabel" type="Label" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)

[node name="Separator" type="HSeparator" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChoicesLabel" type="Label" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your response:"

[node name="ChoicesContainer" type="VBoxContainer" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CloseButton" type="Button" parent="SimulationUI/EventDialog/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="CrisisOverlay" type="Control" parent="SimulationUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SimulationUI/CrisisOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="SimulationUI/CrisisOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrisisPanel" type="PanelContainer" parent="SimulationUI/CrisisOverlay/CenterContainer"]
custom_minimum_size = Vector2(550, 350)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CrisisTitle" type="Label" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "âš  CRISIS âš "
horizontal_alignment = 1

[node name="CrisisDescription" type="Label" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A major crisis has erupted! The stability of the region is at stake."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CrisisEffects" type="Label" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.3, 1)
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CrisisChoicesLabel" type="Label" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How will you respond?"
horizontal_alignment = 1

[node name="CrisisChoicesContainer" type="VBoxContainer" parent="SimulationUI/CrisisOverlay/CenterContainer/CrisisPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PauseMenu" type="Control" parent="SimulationUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="SimulationUI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="SimulationUI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SimulationUI/PauseMenu/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PauseTitle" type="Label" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="SaveBtn" type="Button" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Save Game"

[node name="MainMenuBtn" type="Button" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="SimulationUI/PauseMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit Game"

[node name="EventQueueOverlay" type="Control" parent="SimulationUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="SimulationUI/EventQueueOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.1, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="SimulationUI/EventQueueOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SimulationUI/EventQueueOverlay/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="QueueTitle" type="Label" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ“‹ Event Queue"
horizontal_alignment = 1

[node name="QueueScroll" type="ScrollContainer" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QueueList" type="VBoxContainer" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QueueScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CloseQueueBtn" type="Button" parent="SimulationUI/EventQueueOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="CrisisViewOverlay" type="Control" parent="SimulationUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DimBackground" type="ColorRect" parent="SimulationUI/CrisisViewOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="SimulationUI/CrisisViewOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SimulationUI/CrisisViewOverlay/CenterContainer"]
custom_minimum_size = Vector2(650, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CrisisViewTitle" type="Label" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "âš  ACTIVE CRISES âš "
horizontal_alignment = 1

[node name="RelevanceLabel" type="Label" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
text = "Your Relevance: 0%"
horizontal_alignment = 1

[node name="CrisisScroll" type="ScrollContainer" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CrisisList" type="VBoxContainer" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CrisisScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="CloseCrisisBtn" type="Button" parent="SimulationUI/CrisisViewOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
